[gd_scene load_steps=4 format=3 uid="uid://cxaxdmvsy12wc"]

[ext_resource type="Script" path="res://scenes/invader_shot.gd" id="1_dghjy"]
[ext_resource type="Texture2D" uid="uid://dqyn6gkxj6slf" path="res://assets/Weapons/Rocket.png" id="1_s7chk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2ma0f"]
size = Vector2(3, 6)

[node name="InvaderShot" type="Area2D"]
scale = Vector2(3, 3)
collision_layer = 8
script = ExtResource("1_dghjy")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = ExtResource("1_s7chk")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
texture_filter = 1
shape = SubResource("RectangleShape2D_2ma0f")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
rect = Rect2(-1.5, -3, 3, 6)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
